--- a/index.html
+++ b/index.html
@@ -5,99 +5,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bandaru Lokesh | Aerospace Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary: #003087;
-      --accent: #00aaff;
-      --dark: #121212;
-      --light: #f8fbff;
-      --gray: #555555;
-      --text: #333333;
+      --primary: #00bfff;     /* Bright cyan blue for accents */
+      --bg: #4a6fa5;          /* Main background blue */
+      --text-light: #e0e7ff;
+      --text-dark: #ffffff;
     }
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
       font-family: 'Poppins', sans-serif;
-      line-height: 1.6;
-      color: var(--text);
-      background: #ffffff;
+      background: var(--bg);
+      color: var(--text-dark);
+      min-height: 100vh;
     }
-
-    img { max-width: 100%; display: block; }
 
     /* Navbar */
     .navbar {
       position: fixed;
       top: 0;
       width: 100%;
-      padding: 30px 5%;
-      background: transparent;
-      transition: all 0.4s ease;
-      z-index: 1000;
+      padding: 20px 5%;
       display: flex;
       justify-content: space-between;
       align-items: center;
-    }
-
-    .navbar.scrolled {
-      padding: 15px 5%;
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(12px);
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      z-index: 1000;
     }
 
     .logo {
       display: flex;
       align-items: center;
       gap: 12px;
-      font-size: 2rem;
+      font-size: 1.8rem;
       font-weight: 700;
       color: white;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      transition: color 0.4s;
     }
 
-    .logo i { font-size: 2.6rem; color: var(--accent); }
+    .logo i { font-size: 2.4rem; color: var(--primary); }
 
-    .navbar.scrolled .logo { color: var(--dark); }
-    .navbar.scrolled .logo i { color: var(--primary); }
-
-    .hamburger { display: none; cursor: pointer; flex-direction: column; gap: 6px; }
-
-    .bar {
-      width: 30px;
-      height: 4px;
-      background: white;
-      transition: all 0.3s ease;
+    .nav-links {
+      display: flex;
+      align-items: center;
+      gap: 2.5rem;
     }
 
-    .navbar.scrolled .bar { background: var(--dark); }
-
-    .hamburger.active .bar:nth-child(1) { transform: translateY(10px) rotate(45deg); }
-    .hamburger.active .bar:nth-child(2) { opacity: 0; }
-    .hamburger.active .bar:nth-child(3) { transform: translateY(-10px) rotate(-45deg); }
-
-    .nav-menu { display: flex; align-items: center; gap: 3rem; }
-
-    nav { display: flex; gap: 2.5rem; }
-
-    nav a {
-      text-decoration: none;
+    .nav-links a {
       color: white;
+      text-decoration: none;
       font-weight: 500;
       font-size: 1.1rem;
       transition: color 0.3s;
     }
 
-    nav a:hover { color: var(--accent); }
+    .nav-links a:hover { color: var(--primary); }
 
-    .navbar.scrolled nav a { color: var(--dark); }
-    .navbar.scrolled nav a:hover { color: var(--primary); }
+    .welcome-pill {
+      background: rgba(255, 255, 255, 0.2);
+      padding: 8px 20px;
+      border-radius: 50px;
+      font-size: 0.95rem;
+    }
 
-    .btn-outline {
+    .download-cv {
       padding: 10px 28px;
       border: 2px solid white;
       color: white;
@@ -107,200 +79,155 @@
       transition: all 0.3s;
     }
 
-    .btn-outline:hover { background: white; color: var(--primary); }
+    .download-cv:hover {
+      background: white;
+      color: var(--bg);
+    }
 
-    .navbar.scrolled .btn-outline { border-color: var(--primary); color: var(--primary); }
-    .navbar.scrolled .btn-outline:hover { background: var(--primary); color: white; }
-
-    /* Hero Header */
+    /* Hero */
     .hero {
-      position: relative;
       min-height: 100vh;
-      background-image: url('https://images.pexels.com/photos/912050/pexels-photo-912050.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
       display: flex;
-      align-items: center;
+      flex-direction: column;
       justify-content: center;
+      align-items: center;
       text-align: center;
-      color: white;
-    }
-
-    .hero::before {
-      content: '';
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 30, 100, 0.65);
-      z-index: 1;
-    }
-
-    .hero-content {
+      padding: 0 5%;
       position: relative;
-      z-index: 2;
-      max-width: 900px;
-      padding: 0 20px;
     }
 
-    .tag {
-      display: inline-block;
-      background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(5px);
-      padding: 8px 24px;
-      border-radius: 50px;
-      font-size: 1rem;
-      margin-bottom: 24px;
+    .hero h1 {
+      font-size: 5rem;
+      font-weight: 800;
+      margin: 20px 0;
     }
 
-    .hero-content h1 { font-size: 4.8rem; margin: 20px 0; line-height: 1.1; }
-    .hero-content h1 span { color: var(--accent); }
+    .hero h1 span {
+      color: var(--primary);
+    }
 
-    .hero-content h3 { font-size: 2.4rem; margin-bottom: 20px; }
-    .hero-content p { font-size: 1.3rem; max-width: 700px; margin: 0 auto 40px; }
+    .hero h3 {
+      font-size: 2.2rem;
+      margin-bottom: 20px;
+      color: var(--text-light);
+    }
 
-    .hero-buttons { display: flex; gap: 20px; justify-content: center; margin-bottom: 50px; }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 700px;
+      margin-bottom: 40px;
+      color: var(--text-light);
+    }
 
-    .btn {
+    .hero-buttons {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 60px;
+    }
+
+    .btn-primary {
       padding: 14px 36px;
-      background: var(--accent);
+      background: var(--primary);
       color: white;
       border-radius: 50px;
       text-decoration: none;
       font-weight: 600;
-      transition: all 0.3s;
-      box-shadow: 0 8px 20px rgba(0, 170, 255, 0.3);
     }
 
-    .btn:hover { background: white; color: var(--primary); }
+    .btn-outline {
+      padding: 14px 36px;
+      border: 2px solid white;
+      color: white;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: 600;
+    }
 
-    .social { display: flex; gap: 20px; justify-content: center; margin-bottom: 40px; }
-    .social a { color: white; font-size: 1.9rem; transition: all 0.3s; }
-    .social a:hover { color: var(--accent); transform: translateY(-6px); }
+    .social {
+      display: flex;
+      gap: 30px;
+      margin-bottom: 60px;
+    }
 
-    .hero-profile img {
-      width: 220px;
-      height: 220px;
+    .social a {
+      color: var(--text-light);
+      font-size: 1.8rem;
+      transition: color 0.3s;
+    }
+
+    .social a:hover { color: var(--primary); }
+
+    .profile-badge {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .profile-badge img {
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
-      border: 8px solid white;
-      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4);
-      margin: 0 auto;
+      border: 4px solid white;
+      margin-bottom: 12px;
     }
 
-    /* Add styles for other sections here (About, Stats, etc.) - keeping it concise */
-    .section { padding: 100px 5%; text-align: center; }
-    .section-tag { color: var(--primary); letter-spacing: 4px; text-transform: uppercase; font-size: 0.9rem; margin-bottom: 12px; }
-    .section h2 { font-size: 3rem; margin-bottom: 60px; }
-    .light { background: var(--light); }
+    .profile-badge span {
+      background: rgba(255, 255, 255, 0.3);
+      padding: 8px 24px;
+      border-radius: 50px;
+      font-weight: 600;
+    }
 
-    /* Stats */
-    .stats { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; padding: 80px 5%; background: var(--primary); color: white; }
-    .stat-box h2 { font-size: 3.8rem; }
-    
-    /* Cards */
-    .cards { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 32px; max-width: 1300px; margin: 0 auto; }
-    .card { background: white; padding: 44px 24px; border-radius: 20px; box-shadow: 0 10px 35px rgba(0,0,0,0.08); transition: all 0.4s; }
-    .card:hover { transform: translateY(-16px); }
-
-    /* Portfolio */
-    .portfolio-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(360px, 1fr)); gap: 40px; max-width: 1300px; margin: 0 auto; }
-    .project-card { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 35px rgba(0,0,0,0.08); }
-    .project-card img { height: 250px; object-fit: cover; }
-    .project-content { padding: 24px; }
-
-    /* Contact */
-    .contact-form { max-width: 720px; margin: 0 auto; display: grid; gap: 24px; }
-    .contact-form input, .contact-form textarea { padding: 18px; border-radius: 14px; border: 1px solid #ddd; }
-
-    /* Footer */
-    footer { background: var(--dark); color: white; text-align: center; padding: 40px; }
-
-    /* Mobile */
+    /* Mobile Responsive */
     @media (max-width: 768px) {
-      .hamburger { display: flex; }
-      .nav-menu { position: absolute; top: 100%; left: 0; width: 100%; background: rgba(255,255,255,0.95); flex-direction: column; padding: 40px 0; gap: 32px; display: none; }
-      .nav-menu.active { display: flex; }
-      .hero-content h1 { font-size: 3.5rem; }
-      .hero-buttons { flex-direction: column; }
+      .hero h1 { font-size: 3.5rem; }
+      .hero h3 { font-size: 1.8rem; }
+      .hero-buttons { flex-direction: column; gap: 15px; }
+      .nav-links { gap: 1.5rem; flex-wrap: wrap; justify-content: center; }
     }
   </style>
 </head>
 <body>
+
   <header class="navbar">
-    <div class="logo"><i class="fas fa-rocket"></i> AEROSPACE</div>
-    <div class="hamburger"><span class="bar"></span><span class="bar"></span><span class="bar"></span></div>
-    <div class="nav-menu">
-      <nav>
-        <a href="#home">Home</a><a href="#about">About</a><a href="#services">Services</a><a href="#skills">Skills</a>
-        <a href="#portfolio">Portfolio</a><a href="#resume">Resume</a><a href="#contact">Contact</a>
-      </nav>
-      <a href="resume.pdf" class="btn-outline">Download CV</a> <!-- Upload your PDF to repo root as resume.pdf -->
+    <div class="logo">
+      <i class="fas fa-rocket"></i>
+      AEROSPACE
+    </div>
+    <div class="nav-links">
+      <a href="#home">Home</a>
+      <span class="welcome-pill">👋 Welcome to my Portfolio</span>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#skills">Skills</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#resume">Resume</a>
+      <a href="#contact">Contact</a>
+      <a href="assets/resume.pdf" class="download-cv">Download CV</a>
     </div>
   </header>
 
-  <section id="home" class="hero">
-    <div class="hero-content">
-      <span class="tag">👋 Welcome to my Portfolio</span>
-      <h1>Hi, I'm <span>Bandaru Lokesh</span></h1>
-      <h3>Aerospace Engineering Student</h3>
-      <p>Enthusiastic aerospace engineering student with a strong foundation in aerodynamics, propulsion, and spacecraft design.</p>
-      <div class="hero-buttons">
-        <a href="#portfolio" class="btn">View Portfolio</a>
-        <a href="resume.pdf" class="btn-outline">Download CV</a>
-      </div>
-      <div class="social">
-        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-      </div>
-      <div class="hero-profile">
-        <img src="https://via.placeholder.com/220" alt="Bandaru Lokesh"> <!-- Replace with your photo URL or upload to repo -->
-      </div>
+  <section class="hero" id="home">
+    <h1>Hi, I'm <span>Bandaru Lokesh</span></h1>
+    <h3>Aerospace Engineering Student</h3>
+    <p>Enthusiastic aerospace engineering student with a strong foundation in aerodynamics, propulsion, and spacecraft design.</p>
+    <div class="hero-buttons">
+      <a href="#portfolio" class="btn-primary">View Portfolio</a>
+      <a href="assets/resume.pdf" class="btn-outline">Download CV</a>
+    </div>
+    <div class="social">
+      <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
+    <div class="profile-badge">
+      <img src="assets/profile.jpg" alt="Bandaru Lokesh">
+      <span>Bandaru Lokesh</span>
     </div>
   </section>
 
-  <!-- Your other sections (copy from previous if needed, or add here) -->
-  <!-- Example About -->
-  <section id="about" class="section light">
-    <p class="section-tag">ABOUT ME</p>
-    <h2>Know Me More</h2>
-    <p>Add your about text here...</p>
-  </section>
+  <!-- Add your other sections below (About, Stats, etc.) -->
 
-  <!-- Add Stats, Services, Skills, Portfolio, Resume, Contact similarly -->
-
-  <footer>© 2026 AEROSPACE — Made by Bandaru Lokesh</footer>
-
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const hamburger = document.querySelector('.hamburger');
-      const navMenu = document.querySelector('.nav-menu');
-
-      hamburger.addEventListener('click', () => {
-        hamburger.classList.toggle('active');
-        navMenu.classList.toggle('active');
-      });
-
-      document.querySelectorAll('nav a').forEach(link => {
-        link.addEventListener('click', () => {
-          hamburger.classList.remove('active');
-          navMenu.classList.remove('active');
-        });
-      });
-
-      window.addEventListener('scroll', () => {
-        document.querySelector('.navbar').classList.toggle('scrolled', window.scrollY > 50);
-      });
-
-      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-          e.preventDefault();
-          const target = document.querySelector(this.getAttribute('href'));
-          if (target) window.scrollTo({ top: target.offsetTop - 100, behavior: 'smooth' });
-        });
-      });
-    });
-  </script>
 </body>
 </html>
